addition of scripts, styles and less compilation

--- a/index.html
+++ b/index.html
@@ -1,4 +1,29 @@
 <!doctype HTML>
+
 <head>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>    
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+    <script type="text/javascript" src="scripts/jquery-3.0-slim-min.js"></script>
+    <link rel="stylesheet/less" type="text/css" href="styles/less/bootstrap.less" />
+    <script type="text/javascript" src="scripts/less-min.js"></script>
+    <script type="text/javascript" src="scripts/custom.js"></script>
 </head>
+<body>
+    <div class="container">
+        <div class="navbar-header">
+          <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+        </div>
+        <div class="navbar-inverse side-collapse in">
+          <nav role="navigation" class="navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li><a href="#Home">Home</a></li>
+              <li><a href="#users">Users</a></li>
+              <li><a href="http://placesforlove.com">Places</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="row">
+            <nav class="navbar navbar-default"></nav>
+            <h1>Gobble</h1>
+        </div>
+    </div>
+</body>
