--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype HTML>
 
 <head>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-    <script type="text/javascript" src="scripts/jquery-3.0-slim-min.js"></script>
+    <script src="scripts/angular1.5.7-min.js"></script>
     <link rel="stylesheet/less" type="text/css" href="styles/less/bootstrap.less" />
     <script type="text/javascript" src="scripts/less-min.js"></script>
+    <script type="text/javascript" src="scripts/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
 </head>
 <body>
