--- a/index.html
+++ b/index.html
@@ -2,29 +2,31 @@
 
 <head>
     <script src="scripts/angular1.5.7-min.js"></script>
-    <link rel="stylesheet/less" type="text/css" href="styles/less/bootstrap.less" />
+    <link rel="stylesheet/less" type="text/css" href="styles/less/bootstrap.less"/>
     <script type="text/javascript" src="scripts/less-min.js"></script>
     <script type="text/javascript" src="scripts/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="navbar-header">
-          <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-        </div>
-        <div class="navbar-inverse side-collapse in">
-          <nav role="navigation" class="navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="#Home">Home</a></li>
-              <li><a href="#users">Users</a></li>
-              <li><a href="http://placesforlove.com">Places</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="row">
-            <nav class="navbar navbar-default"></nav>
-            <h1>Gobble</h1>
+<div class="container">
+    <nav role="navigation" class="navbar-collapse">
+        <ul class="nav navbar-nav">
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#users">Users</a></li>
+            <li><a href="http://placesforlove.com">Places</a></li>
+        </ul>
+    </nav>
+    <h1>Gobble</h1>
+
+    <div class="offers">
+        <div class="offer">
+            <h2>
+                Free 2 coffies
+            </h2>
+            <span class="brand">Coffee day</span>
+            <img src="images/offers/coffeeday-2-coffee-free-offer.jpg" alt="">
         </div>
     </div>
+</div>
 </body>
