new structure for project, adding sass & compass

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype HTML>
 
 <head>
-    <script src="scripts/angular1.5.7-min.js"></script>
-    <link rel="stylesheet/less" type="text/css" href="styles/less/bootstrap.less"/>
-    <script type="text/javascript" src="scripts/less-min.js"></script>
-    <script type="text/javascript" src="scripts/jquery-2.2.4.min.js"></script>
-    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-    <script type="text/javascript" src="scripts/custom.js"></script>
+    <script src="js/angular1.5.7-min.js"></script>
+    <link rel="stylesheet/less" type="text/css" href="css/less/bootstrap.less"/>
+    <script type="text/javascript" src="js/less-min.js"></script>
+    <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
 </head>
 <body>
 <div class="container">
