--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!doctype HTML>
 
 <head>
-    <script src="js/angular1.5.7-min.js"></script>
-    <link rel="stylesheet/less" type="text/css" href="css/less/bootstrap.less"/>
-    <script type="text/javascript" src="js/less-min.js"></script>
-    <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/custom.js"></script>
 </head>
 <body>
 <div class="container">
     <nav role="navigation" class="navbar-collapse">
         <ul class="nav navbar-nav">
-            <li><a href="#Home">Home</a></li>
+            <li><a href="#Home">asdf</a></li>
             <li><a href="#users">Users</a></li>
             <li><a href="http://placesforlove.com">Places</a></li>
         </ul>
@@ -29,4 +23,6 @@
         </div>
     </div>
 </div>
+<script src="js/script.js"></script>
+<script src="http://localhost:63342/gobble/livereload.js"></script>
 </body>
