--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div class="container">
     <nav role="navigation" class="navbar-collapse">
         <ul class="nav navbar-nav">
-            <li><a href="#Home">asdf</a></li>
+            <li><a href="#Home">Home</a></li>
             <li><a href="#users">Users</a></li>
             <li><a href="http://placesforlove.com">Places</a></li>
         </ul>
@@ -24,5 +24,5 @@
     </div>
 </div>
 <script src="js/script.js"></script>
-<script src="http://localhost:63342/gobble/livereload.js"></script>
+<script src="http://localhost:35729/livereload.js"></script>
 </body>
